--- a/frontend/invoice-app/src/styles/Nav.module.css
+++ b/frontend/invoice-app/src/styles/Nav.module.css
@@ -1,3 +1,58 @@
-.text{
-    color:green;
+.navContainer{
+    background-color:#20243c;
+    width:5vw;
+    height:100vh;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 80px;
+}
+.logoContainer{
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    width: 100%;
+    min-height: 10vh;
+    background-color: #785df5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.logoContainer:hover{
+    cursor: pointer;
+    background-color:#6850d3;
+}
+.logo{
+    width: 50px;
+    height:50px;
+}
+.middleNav{
+    width: 100%;
+    height:100%;
+    display:flex;
+    flex-direction:column-reverse;
+    padding-bottom: 5vh;
+    align-items: center;
+}
+.theme{
+    
+}
+.userIconContainer{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    min-height: 8vh;
+    margin-top:auto;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0 -1px 2px #8b8cb1;
+}
+.userIcon{
+    background-color:black;
+    border-radius: 50%;
+    width: 35px;
+    height:35px;
 }
