--- a/frontend/invoice-app/src/styles/Nav.module.css
+++ b/frontend/invoice-app/src/styles/Nav.module.css
@@ -1,7 +1,7 @@
 .navContainer{
     background-color:#20243c;
-    width:5vw;
-    height:100vh;
+    width:50px;
+    /* height:100vh; */
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     display:flex;
@@ -13,7 +13,7 @@
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     width: 100%;
-    min-height: 10vh;
+    min-height: 85px;
     background-color: #785df5;
     display: flex;
     flex-direction: column;
@@ -25,8 +25,8 @@
     background-color:#6850d3;
 }
 .logo{
-    width: 50px;
-    height:50px;
+    width: 50%;
+    /* height:50%; */
 }
 .middleNav{
     width: 100%;
@@ -36,8 +36,17 @@
     padding-bottom: 5vh;
     align-items: center;
 }
+.themeContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
+}
 .theme{
-    
+    padding: 2px;
+    width: 25px;
+    /* height: 40%; */
+    cursor: pointer;
 }
 .userIconContainer{
     display:flex;
@@ -45,7 +54,7 @@
     align-items: center;
     justify-content: center;
     width:100%;
-    min-height: 8vh;
+    min-height: 80px;
     margin-top:auto;
     border-bottom-right-radius: 25px;
     box-shadow: 0 -1px 2px #8b8cb1;
@@ -54,5 +63,5 @@
     background-color:black;
     border-radius: 50%;
     width: 35px;
-    height:35px;
+    aspect-ratio: 1/1;
 }
