--- a/frontend/invoice-app/src/styles/Home.module.css
+++ b/frontend/invoice-app/src/styles/Home.module.css
@@ -1,7 +1,81 @@
 .layoutContainer{
-    background-color:gray;
-    width:100vw;
-    height:100vh;
     display:flex;
     flex-direction: row;
+    height: 100vh;
+}
+.mainHome{
+    padding-top: 2rem;
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+.header{
+    display: flex;
+    flex-direction: row;
+    width: 60vw;
+    min-width: 40rem;
+    justify-content: space-between;
+}
+.title{
+    padding: .2rem;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-items: center;
+    gap: .7rem;
+}
+.invoiceTitle{
+    font-size:1.7rem;
+    margin:0px;
+}
+.invoiceSubTitle{
+    font-size:.8rem;
+    font-weight: normal;
+    margin:0px;
+}
+.newInvoiceAndFilterContainer{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+}
+.invoices{
+    display:flex;
+    flex-direction: column;
+    width:60vw;
+    min-width: 40rem;
+    gap: 1rem;
+}
+.invoice{
+    font-size: 1rem;
+    padding: 1rem;
+    border-radius: 10px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight:normal;
+    margin:0px;
+}
+.invoiceID{
+    font-weight:bold;
+}
+.invoiceDue{
+
+}
+.invoiceOwner{
+
+}
+.invoiceCost{
+    font-weight:bold;
+}
+.invoiceStatus{
+
+}
+
+@media screen and (max-width:800px){
+    .layoutContainer{
+        flex-direction: column;
+    }
 }
