--- a/frontend/invoice-app/src/styles/Home.module.css
+++ b/frontend/invoice-app/src/styles/Home.module.css
@@ -2,6 +2,7 @@
     display:flex;
     flex-direction: row;
     height: 100vh;
+    position: relative;
 }
 .mainHome{
     padding-top: 2rem;
@@ -40,6 +41,9 @@
     flex-direction: row;
     align-items: center;
     gap: 2rem;
+}
+.filterSelect{
+    outline: none;
 }
 .newInvoice{
     gap:1rem;
