--- a/frontend/invoice-app/src/styles/Nav.module.css
+++ b/frontend/invoice-app/src/styles/Nav.module.css
@@ -1,4 +1,5 @@
 .navContainer{
+    z-index: 100;
     background-color:#20243c;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
@@ -6,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     width: 70px;
+    min-height:300px;
 }
 .logoContainer{
     border-top-right-radius: 25px;
@@ -67,10 +69,12 @@
 @media screen and (max-width:800px){
     .navContainer{
         flex-direction: row;
+        min-height:70px;
         height:70px;
         width:100%;
         border-radius: 0px;
         overflow: hidden;
+        
     }
     .logoContainer{
         width: 6rem;
