--- a/frontend/invoice-app/src/styles/Home.module.css
+++ b/frontend/invoice-app/src/styles/Home.module.css
@@ -1,7 +1,7 @@
 .layoutContainer{
     display:flex;
     flex-direction: row;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
 }
 .mainHome{
