updated newInvoice to have a invoice status selection

--- a/frontend/invoice-app/src/styles/NewInvoiceModal.module.css
+++ b/frontend/invoice-app/src/styles/NewInvoiceModal.module.css
@@ -99,7 +99,7 @@ input{
 .invoiceDateAndTerm>.labelInputPair>input{
     pointer-events: none;
 }
-.invoiceDateAndTerm>.labelInputPair>select{
+select{
     outline: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
