--- a/frontend/invoice-app/src/styles/Nav.module.css
+++ b/frontend/invoice-app/src/styles/Nav.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     width: 70px;
     min-height:300px;
+    max-height:100vh;
 }
 .logoContainer{
     border-top-right-radius: 25px;
