--- a/frontend/invoice-app/src/styles/Home.module.css
+++ b/frontend/invoice-app/src/styles/Home.module.css
@@ -44,6 +44,7 @@
 }
 .filterSelect{
     outline: none;
+    border: 1px solid gray;
 }
 .newInvoice{
     gap:1rem;
@@ -127,6 +128,42 @@
     font-size: 1.2rem;
 }
 .invoiceStatus{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(192, 192, 192);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    color: gray;
+}
+.invoiceStatusDraft{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(192, 192, 192);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    color: gray;
+}
+.invoiceStatusPending{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(238, 212, 96);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    color:rgb(236, 137, 25);
+}
+.invoiceStatusPaid{
     color: rgba(63,199,161,255);
     font-weight: bold;
     border-radius: 10px;
