--- a/frontend/invoice-app/src/styles/Home.module.css
+++ b/frontend/invoice-app/src/styles/Home.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     min-height: 100vh;
     position: relative;
+    padding-bottom:3rem;
 }
 .mainHome{
     padding-top: 2rem;
@@ -198,6 +199,7 @@
         display:grid;
         grid-template-columns: 50% 50%;
         grid-template-rows: 33% 33% 33%;
+        padding-bottom: 2rem;
     }
     .invoice>p{
         margin:.2rem;
