--- a/frontend/invoice-app/src/styles/InvoiceDetail.module.css
+++ b/frontend/invoice-app/src/styles/InvoiceDetail.module.css
@@ -7,5 +7,161 @@
 .InvoiceDetailContainer{
     display:flex;
     flex-direction: column;
-    width:100%;
+    width: 100%;
+    align-items: center;
+}
+.invoiceWrapper{
+    width:60%;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    display:flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.backBtnContainer{
+    display:flex;
+    flex-direction: row;
+    gap: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    align-items: center;
+    padding-left: 1rem;
+}
+.backBtnContainer>p:first-child{
+    font-size: 1.8rem;
+    color: #4d4197;
+}
+.invoiceHeaderContainer{
+    border-radius:7px;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    justify-content: space-between;
+}
+.statusContainer{
+    display:flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.buttonsContainer{
+    align-items: center;
+    display:flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.buttonStyle{
+    padding: 1rem;
+    min-width: 3rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.buttonStyle:first-child{
+    background-color: #959dda;
+}
+.buttonStyle:nth-child(2){
+    background-color: rgb(255, 43, 43);
+}
+.buttonStyle:nth-child(3){
+    background-color: rgb(79, 226, 35);
+}
+.invoicesDetailsSubContainer{
+    border-radius: 10px;
+    padding: 1rem;
+    display:flex;
+    flex-direction: column;
+    gap:.2rem;
+}
+.invoiceTopWrapper{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.invoiceIDAndDescriptionWrapper{
+    display: flex;
+    flex-direction: column;
+    gap: .1rem;
+}
+.invoiceIDAndDescriptionWrapper>h1:first-child{
+    font-weight: bold;
+    margin-bottom:0px;
+    font-size: 1.4rem;
+}
+.invoiceIDAndDescriptionWrapper>p{
+    margin:0px;
+}
+.AddressWrapper{
+    display:flex;
+    flex-direction: column;
+    gap: .3rem;
+}
+.AddressWrapper>p{
+    padding:0px;
+    margin:0px;
+    font-size:.9rem;
+}
+.invoiceMiddleWrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;   
+}
+.titledTextPair{
+    display:flex;
+    flex-direction: column;
+    gap:.3rem;
+}
+.titledTextPair>h2,.titledTextPair>p{
+    padding:0px;
+    margin:0px;
+    font-size: 1rem;
+}
+.invoiceDatesWrapper,.clientEmailWrapper{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+}
+.clientAddressWrapper{
+    display:flex;
+    flex-direction: column;
+    gap: .4rem;
+    
+}
+.invoiceBottomWrapper{
+    border-radius: 12px;
+    display:flex;
+    flex-direction: column;
+    border: 1px solid black;
+    margin-top: 1rem;
+    padding: 0px;
+}
+.listDescription{
+    display:grid;
+    padding: .6rem;
+    grid-template-columns: 40% 10% 25% 25%;
+}
+.listDescription>p{
+    text-align: center;
+    margin:0px;
+}
+.listDescription>p:first-child{
+    text-align: left;
+}
+.listDescription>p:last-child{
+    text-align: right;
+}
+.lineItem{
+    margin-bottom: .2rem;
+}
+.lineItem>p:first-child{
+    font-weight: bold;
+}
+.totalDueWrapper{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color:black;
+    color:white;
+    align-items: center;
+    padding: 0px 1rem;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
 }
