--- a/frontend/invoice-app/src/styles/Home.module.css
+++ b/frontend/invoice-app/src/styles/Home.module.css
@@ -234,3 +234,13 @@
    filter:brightness(20%);
    pointer-events: none;
 }
+
+@media screen and (max-width:550px){
+    .header{
+        flex-direction: column;
+        gap:1rem;
+    }
+    .newInvoiceAndFilterContainer{
+        justify-content: space-between;
+    }
+}
