--- a/frontend/invoice-app/src/styles/InvoiceDetail.module.css
+++ b/frontend/invoice-app/src/styles/InvoiceDetail.module.css
@@ -26,10 +26,17 @@
     font-weight: bold;
     align-items: center;
     padding-left: 1rem;
+    cursor: pointer;
+    margin:0px;
+    padding:0px;
+    width: 7rem;
 }
 .backBtnContainer>p:first-child{
     font-size: 1.8rem;
     color: #4d4197;
+}
+.backBtnContainer>p{
+    margin:0px;
 }
 .invoiceHeaderContainer{
     border-radius:7px;
@@ -41,6 +48,7 @@
 .statusContainer{
     display:flex;
     flex-direction: row;
+    align-items: center;
     gap: 1rem;
 }
 .buttonsContainer{
@@ -50,12 +58,13 @@
     gap: 1rem;
 }
 .buttonStyle{
-    padding: 1rem;
+    padding: .5rem .6rem;
     min-width: 3rem;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border:1px solid black;
 }
 .buttonStyle:first-child{
     background-color: #959dda;
@@ -94,7 +103,6 @@
 .AddressWrapper{
     display:flex;
     flex-direction: column;
-    gap: .3rem;
 }
 .AddressWrapper>p{
     padding:0px;
@@ -164,4 +172,135 @@
     padding: 0px 1rem;
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
+}
+.invoiceStatus{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(192, 192, 192);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    color: gray;
+}
+.invoiceStatusDraft{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(192, 192, 192);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    color: gray;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding:0px;
+    margin:0px;
+}
+.invoiceStatusPending{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(238, 212, 96);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    color:rgb(236, 137, 25);
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding:0px;
+    margin:0px;
+}
+.invoiceStatusPaid{
+    color: rgba(63,199,161,255);
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgba(63,199,161,.4);
+    align-items: center;
+    height: 3rem;
+    width: 6rem;
+    margin-right: 1rem;
+    padding-left: .3rem;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding:0px;
+    margin:0px;
+}
+
+
+@media screen and (max-width:1050px){
+    .buttonsContainer{
+        gap: .2rem;
+    }
+    .buttonStyle{
+        font-size:.7rem;
+    }
+    .invoiceStatus,.invoiceStatusDraft,.invoiceStatusPending,.invoiceStatusPaid{
+        font-size:.8rem;
+    }
+    .statusContainer>p{
+        margin:0px;
+        width:auto;
+        min-width:3rem;
+    }
+    .InvoiceDetailContainer,.InvoiceDetailContainer h2,.InvoiceDetailContainer p{
+        font-size:.8rem;
+    }
+    .invoiceIDAndDescriptionWrapper>h1:first-child{
+        font-size:1.2rem;
+    }
+}
+@media screen and (max-width:800px){
+    .layout{
+        flex-direction: column;
+    }
+    .InvoiceDetailContainer{
+        max-width: 100%;
+    }
+    .invoicesDetailsSubContainer{
+        gap: 1.5rem;
+    }
+    .invoiceWrapper{
+        width: 92%;
+    }
+    .buttonsContainer{
+        display:grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50% 50%;
+        min-width: 10rem;
+        min-height: 4rem;
+        gap:.3rem;
+    }
+    .buttonStyle{
+        width:100%;
+        height:100%;
+        padding:0px;
+        margin:0px;
+        text-align: center;
+        justify-content: center;
+    }
+    .invoiceStatus,.invoiceStatusDraft,.invoiceStatusPending,.invoiceStatusPaid{
+        padding: .2rem;
+    }
+    .invoiceTopWrapper{
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    .invoiceMiddleWrapper{
+        display:grid;
+        grid-template-columns: 50% 50%;
+    }
 }
