--- a/frontend/invoice-app/src/styles/Login.module.css
+++ b/frontend/invoice-app/src/styles/Login.module.css
@@ -19,7 +19,7 @@
     height: 25rem;
     display:flex;
     flex-direction: column;
-    gap: 3rem;
+    justify-content: space-between;
 }
 .formTitle{
     margin:0px;
@@ -35,7 +35,7 @@
     flex-direction: column;
     gap: 1.2rem;
 }
-.loginBtn{
+.loginBtn,.homeBtn{
     border-radius: 5px;
     border:none;
     background-color: #785df5;
@@ -45,10 +45,19 @@
     cursor: pointer;
     margin-top: 2rem;
 }
-.loginBtn:hover{
+.homeBtn{
+    margin-top: 0px;
+    width:45%;
+}
+.loginBtn:hover,.homeBtn:hover{
+    transition: filter .3s;
     filter: brightness(.9);
 }
-
+.btnContainer{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 @media screen and (max-width:800px){
     .layout{
