--- a/frontend/invoice-app/src/styles/Login.module.css
+++ b/frontend/invoice-app/src/styles/Login.module.css
@@ -16,7 +16,7 @@
     padding: 2rem;
     border-radius: 12px;
     width: 20rem;
-    height: 25rem;
+    min-height: 25rem;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
@@ -57,6 +57,7 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: .5rem;
 }
 
 @media screen and (max-width:800px){
